language/move-lang/tests/move_check/liveness/explicit_last_copy.exp
error: 

   ┌── tests/move_check/liveness/explicit_last_copy.move:4:9 ───
   │
 4 │         copy x;
   │         ^^^^^^ Invalid 'copy'. The local 'x' is not live following this expression. Remove the 'copy' annotation or re-annotate as 'move'
   │

error: 

   ┌── tests/move_check/liveness/explicit_last_copy.move:9:17 ───
   │
 9 │         let x = copy x;
   │                 ^^^^^^ Invalid 'copy'. The local 'x' is not live following this expression. Remove the 'copy' annotation or re-annotate as 'move'
   │

error: 

    ┌── tests/move_check/liveness/explicit_last_copy.move:16:13 ───
    │
 16 │             copy x;
    │             ^^^^^^ Invalid 'copy'. The local 'x' is not live following this expression. Remove the 'copy' annotation or re-annotate as 'move'
    │

error: 

    ┌── tests/move_check/liveness/explicit_last_copy.move:24:13 ───
    │
 24 │             copy x;
    │             ^^^^^^ Invalid 'copy'. The local 'x' is not live following this expression. Remove the 'copy' annotation or re-annotate as 'move'
    │

error: 

    ┌── tests/move_check/liveness/explicit_last_copy.move:31:13 ───
    │
 31 │             copy x;
    │             ^^^^^^ Invalid 'copy'. The local 'x' is not live following this expression. Remove the 'copy' annotation or re-annotate as 'move'
    │

error: 

    ┌── tests/move_check/liveness/explicit_last_copy.move:33:13 ───
    │
 33 │             copy x;
    │             ^^^^^^ Invalid 'copy'. The local 'x' is not live following this expression. Remove the 'copy' annotation or re-annotate as 'move'
    │

error: 

    ┌── tests/move_check/liveness/explicit_last_copy.move:49:9 ───
    │
 49 │         copy x;
    │         ^^^^^^ Invalid 'copy'. The local 'x' is not live following this expression. Remove the 'copy' annotation or re-annotate as 'move'
    │

